# memra-1.0

./: .gitignore  LICENSE  README.md  install.sh  start.sh
engine/: pyproject.toml
engine/config/: default.yaml
engine/src/: cli.py  coordinator.py  mcp_server.py  server.py
engine/src/agents/: lifecycle.py  task_queue.py
engine/src/api/: models.py  openai_routes.py
engine/src/chain_of_thought/: drift_detection.py  goal_stack.py
engine/src/context/: auditor.py  entity_resolution.py  retrieval.py  seeds.py  structured_state.py  transcript.py
engine/src/orchestrator/: frontier_client.py  local_client.py  triage.py
engine/src/profile/: graduation.py  user_profile.py
engine/src/session/: kaizen.py  manager.py
framework/: FRAMEWORK.md
