[project]
name = "memra"
version = "1.1.0"
description = "Your AI just got a memory. Drop-in context engine with persistent memory, intelligent routing, and entity resolution."
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Aaron Blonquist", email = "aaron@memra.ai"}]
# readme = "README.md"  # set when publishing to PyPI
keywords = ["ai", "memory", "context", "mcp", "agent", "sovereign", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "anthropic>=0.49.0",
    "fastmcp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bashonda2/memra-1.0"
Repository = "https://github.com/bashonda2/memra-1.0"

[project.scripts]
memra = "src.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
